# Enjoy-The-Beach

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: 16340023陈明亮-个人报告.md  16340024陈铭涛-个人报告.md  16340025陈慕远-个人报告.md  16340026陈谱一-个人报告.md  report.md
includes/: camera.h  data.h
reports/: 16340023陈明亮-个人项目初步报告.md  16340024陈慕远-个人报告.md  16340024陈铭涛-个人报告.md
resources/animation/: Character Running.fbx
resources/beach/: Beach.mtl
resources/birds/bird1/: bird 1.mtl
resources/coconut/: Coconut.mtl
resources/coconut_tree/: PUSHILIN_palm_tree.mtl  PalmyraPalmTree.mtl
resources/fires/: PUSHILIN_cactus.mtl
resources/fishes/: Crocodile_01.mtl
resources/landscape/: dusk.hxl  night.hxl
resources/lantern/: materials.mtl
resources/mountain/: WinterScene.mtl
resources/seagull/: Flying gull Texture 2.mtl
resources/seashell/: seaShell2.mtl
resources/textures/cartoon/1/: Ls Cartoon.mat
resources/textures/cartoon/2/: Ls Cartoon 02.mat
resources/textures/cartoon/3/: Ls Cartoon 03.mat
resources/textures/cartoon/4/: Ls Cartoon 04.mat
src/: Bezier.cpp  Bezier.h  MainLoop.cpp  MainLoop.h  main.cpp
src/Shader/: shader.cpp  shader.h  shaderPaths.h
src/Utils/: Utils.cpp  Utils.h
src/includes/: Shadow.h  Utils.h  animated_mesh.h  animated_model.h  animation_system.h  camera.h  cube_render.h  data.h  font_render.h  math_3d.h  mesh.h  model.h  ogldev_util.h  particle_system.h  shader.h  water.h  water_render.h  water_tile.h  world_render.h
src/includes/terrain/: Bezier.h  Config.h  Simulation.h  framebuffer.h  grid.h  perlinTex.h  sky.h  tree.h  water.h
src/includes/terrainEngine/: BaseShader.h  CloudsModel.h  GUI.h  ScreenSpaceShader.h  Skybox.h  Terrain.h  VolumetricClouds.h  Water.h  Window.h  glError.h  sceneElements.h  texture.h
src/shaders/: blinn_phong_light_frag.glsl  blinn_phong_light_vert.glsl  color_frag.glsl  color_vert.glsl  gouraud_light_frag.glsl  gouraud_light_vert.glsl  model_shader.fs  model_shader.vs  phong_light_frag.glsl  shader.fs  shader.vs  shadow_map_frag.glsl  shadow_map_vert.glsl  shadow_vert.glsl  simple_depth_frag.glsl  simple_frag.glsl  simple_vert.glsl  texture_frag.glsl  texture_vert.glsl  water.fs  water.vs  water_frag.glsl  water_vert.glsl
src/shaders/particle/: Render.fs  Render.vs  Update.fs  Update.gs  Update.vs
src/utils/: BaseShader.cpp  CloudsModel.cpp  GUI.cpp  ScreenSpaceShader.cpp  Shadow.cpp  SkyBox.cpp  Terrain.cpp  Utils.cpp  VolumetricClouds.cpp  Water.cpp  Window.cpp  animated_mesh.cpp  animated_model.cpp  animation_system.cpp  buffers.cpp  camera.cpp  cube_render.cpp  data.h  drawableObject.cpp  glError.cpp  math_3d.cpp  model.cpp  old-main.cpp  particle_system.cpp  shader.cpp  texture.cpp  water.cpp  water_render.cpp  world_render.cpp
test/: camera.cpp  imgui.ini  main.cpp  shader.cpp  shader.h
(+3 files in other folders)
